# heart

./: .gitignore  CMakeLists.txt  README.md  flake.nix  run.sh
src/: linalg.hh  main.cc
src/codegen/: generate.py  surface.c  surface.h
